--- a/package.json
+++ b/package.json
@@ -13,7 +13,10 @@
     "react": "18.2.0",
     "react-native": "0.73.7",
     "react-native-paper": "^5.12.3",
-    "react-native-safe-area-context": "^4.9.0"
+    "react-native-safe-area-context": "^4.9.0",
+    "react-native-web": "~0.19.6",
+    "react-dom": "18.2.0",
+    "@expo/metro-runtime": "~3.1.3"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
@@ -28,6 +31,7 @@
     "babel-jest": "^29.6.3",
     "eslint": "^8.19.0",
     "jest": "^29.6.3",
+    "metro-config": "^0.80.8",
     "prettier": "2.8.8",
     "react-test-renderer": "18.2.0",
     "typescript": "5.0.4"
